--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -1,24 +1,17 @@
 ---
-- name: Ensure SELINUX is disabled
-  lineinfile:
-    dest: /etc/selinux/config
+- name: Ensure postgreql packages are installed
+  ansible.builtin.apt:
+    name: "{{ item }}"
     state: present
-    regexp: "SELINUX=.*"
-    line: "SELINUX=disabled"
-  tags: selinux
-
-- name: Ensure PostgreSQL packages are installed
-  yum: name="{{ item }}" state=present
   with_items:
     - postgresql-server
     - python-psycopg2
   notify:
     - restart postgresql
   register: postgresql_yum
-  tags: yum
 
 - name: Ensure postgresql_data_dir exists
-  file:
+  ansible.builtin.file:
     path: "{{ postgresql_data_dir }}"
     state: directory
     owner: "{{ postgresql_user }}"
@@ -29,10 +22,10 @@
 - name: Ensure postgresql_data_dir is configured
   lineinfile:
     dest: /etc/sysconfig/pgsql/postgresql
-    create: yes
+    create: true
     line: PGDATA={{ postgresql_data_dir }}
   notify:
-    - restart postgresql
+    - Restart postgresql
 
 - name: Init postgresql
   become_user: "{{ postgresql_user }}"
