feature: add tested working roles

--- a/playbooks/provision/portainer.yml
+++ b/playbooks/provision/portainer.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install portainer
-  hosts: cloud-central
+  hosts: central
   tasks:
     - name: Deploy Portainer
       community.docker.docker_container:
