--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -1,15 +1,15 @@
 ---
-- name: Install Prerequisites
+- name: Install prerequisites
   ansible.builtin.apt:
     name: "{{ item }}"
     update_cache: true
-    state: present
     force_apt_get: true
+    state: present
   loop: ["aptitude"]
 
-- name: Install Packages
+- name: Install packages
   ansible.builtin.apt:
     name: "{{ item }}"
-    update_cache: true
+    update_cache: yes
     state: present
   loop: "{{ packages }}"
