--- a/roles/nginx/handlers/main.yml
+++ b/roles/nginx/handlers/main.yml
@@ -1,12 +1,12 @@
 ---
 - name: Reload Nginx
-  service:
+  ansible.builtin.service:
     name: nginx
     state: reloaded
   listen: "Reload Nginx"
 
 - name: Restart Nginx
-  service:
+  ansible.builtin.service:
     name: nginx
     state: restarted
   listen: "Restart Nginx"
