--- a/playbooks/provision/watchtower.yml
+++ b/playbooks/provision/watchtower.yml
@@ -5,9 +5,9 @@
     - name: Deploy Watchtower
       community.docker.docker_container:
         name: watchtower
-        command: --schedule "0 0 4 * * *"
+        command: |
+          --interval 100
         image: containrrr/watchtower
-
         volumes:
           - /var/run/docker.sock:/var/run/docker.sock
         restart_policy: always
