--- a/playbooks/applications/api-gateway.yml
+++ b/playbooks/applications/api-gateway.yml
@@ -11,7 +11,7 @@
         port: 8000
     dns_records:
       - name: api
-        value: "{{ ansible_ssh_host }}"
+        value: "{{ ansible_default_ipv4.address }}"
 
   vars_files:
     - ../../vars/cloudflare/main.yml
