--- a/playbooks/provision/watchtower.yml
+++ b/playbooks/provision/watchtower.yml
@@ -8,7 +8,7 @@
         image: containrrr/watchtower
         command: |
           --interval 300
-          --cleanup true
+          --cleanup
         volumes:
           - /var/run/docker.sock:/var/run/docker.sock
         restart_policy: always
